tests/cases/errors/loop_label/continue_outside_loop.vnm
fn main() {
  let x = 0;
  if (x == 0) {
    continue;
  }
  return 0;
}

main();
